<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="18dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/img_back"
            android:padding="0dp"
            app:srcCompat="@drawable/back"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="62dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/title_form"
            android:textColor="@color/gray_800"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangle"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/title_info"
                android:textColor="@color/gray_800"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/value_nik"
                android:text="@string/desc_info"
                android:textColor="@color/gray_600"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_nik"
                android:textColor="@color/gray_800"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/etNIK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/value_name"
                android:background="@drawable/bg_gray"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:text="@string/value_nik"
                android:textColor="@color/gray_800"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_name"
                    android:textColor="@color/gray_800"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/required"
                    android:textColor="@color/primary_green"
                    android:textSize="10sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_gray"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:text="@string/value_name"
                android:textColor="@color/gray_800"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_date"
                    android:textColor="@color/gray_800"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/required"
                    android:textColor="@color/primary_green"
                    android:textSize="10sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/value_date"
                android:background="@drawable/bg_gray"
                android:drawableRight="@drawable/calendar"
                android:ems="10"
                android:inputType="date"
                android:padding="12dp"
                android:text="@string/value_date"
                android:textColor="@color/gray_800"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_gender"
                    android:textColor="@color/gray_800"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/required"
                    android:textColor="@color/primary_green"
                    android:textSize="10sp" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rgGender">

                <RadioButton
                    android:layout_marginTop="8dp"
                    android:id="@+id/rbGenderOption1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/value_gender_option1"
                    android:checked="true"
                    android:buttonTint="@color/primary_green"
                    />
                <RadioButton
                    android:id="@+id/rbGenderOption2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/value_gender_option2"

                    />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_gender"
                    android:textColor="@color/gray_800"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/required"
                    android:textColor="@color/primary_green"
                    android:textSize="10sp" />

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rgRelation">

                <RadioButton
                    android:layout_marginTop="8dp"
                    android:id="@+id/rbRelationOption1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:buttonTint="@color/primary_green"
                    android:text="@string/value_relation_option1"
                    />
                <RadioButton
                    android:id="@+id/rbRelationOption2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/value_relation_option2"
                    /> <RadioButton
                    android:id="@+id/rbRelationOption3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/value_relation_option3"
                    /> <RadioButton
                    android:id="@+id/rbRelationOption4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/value_relation_option4"
                    />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:background="@drawable/bg_green"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</ScrollView>